k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
        - name: python
          image: hello-python:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 6001
---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: python
  ports:
    - name: http   # REQUIRED
      port: 6001
      targetPort: 6001
      nodePort: 31708
